# lv_neon_benchmark

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_all.sh  lv_conf_asm.defaults  lv_conf_draw_asm_neon.h  lv_conf_draw_asm_neon64.h  lv_conf_draw_asm_none.h  lv_conf_sw.defaults
cmake_toolchain_files/: aarch64-none-linux-gnu.cmake  arm-none-linux-gnueabihf.cmake
results/: drawsw_32b  neon_64b
results/1080p/32b/: neon_32b
results/1080p/64b/: drawsw_64b  neon_64b  neon_asm_64b
results/4k/: drawsw_64b  neon_32b  neon_intrinsics_32b  neon_intrinsics_64b
results/4k/32b/: drawsw_32b  neon_intrinsics_32b
results/4k/64b/: drawsw_64b  neon_asm_64b
results/64b/: neon_64b
results/imx/: neon_intrinsics  sw
results/rgb565/: neon_intrinsics_32b
results/rgb565/1080p/: neon_asm_32b
results/rgb565/1080p/32b/: drawsw_32b  neon_asm_32b  neon_intrinsics_32b
results/rgb565/1080p/64b/: drawsw_64b  neon_intrinsics_64b
results/rgb565/4k/: neon_asm_64b
results/rgb565/4k/32b/: neon_asm_32b
results/rgb565/4k/64b/: neon_intrinsics_64b
results/rgb888/1080p/64b/: drawsw1_64b  drawsw2_64b  drawsw3_64b  neon1_64b  neon2_64b  neon3_64b
results/xrgb8888/1080p/64b/: drawsw1_64b  drawsw2_64b  drawsw3_64b  neon1_64b  neon2_64b  neon3_64b
src/: main.c
test/: main.c
